--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -21,7 +21,7 @@
       <nz-row nzJustify="space-between" nzAlign="middle">
         <nz-col>
           <nz-space nzAlign="center">
-            <a *nzSpaceItem nz-tooltip="飞书" (click)="lark()">
+            <a *nzSpaceItem nz-tooltip="Lark" (click)="lark()">
               <nz-avatar [nzSize]="32" [nzSrc]="['assets', 'Lark.png'] | wpxAssets"></nz-avatar>
             </a>
           </nz-space>
