update: [Monitor] Retain the original part of the observability as monitor, change time particles to 1m, APM and RUNTIME use Elastic APM support

--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -29,7 +29,10 @@
           <span nz-icon nzType="database" nzTheme="outline"></span>
           <span>数据集合</span>
         </li>
-
+        <li nz-menu-item nzMatchRouter routerLink="monitor">
+          <span nz-icon nzType="line-chart" nzTheme="outline"></span>
+          <span>服务监控</span>
+        </li>
         <li nz-menu-divider></li>
         <li nz-menu-item nzMatchRouter routerLink="users">
           <span nz-icon nzType="team" nzTheme="outline"></span>
