update: layout display

--- a/src/app/admin/imessages/emqx/emqx.component.html
+++ b/src/app/admin/imessages/emqx/emqx.component.html
@@ -32,7 +32,7 @@
                     <nz-badge nzStatus="processing" nzText="运行中"></nz-badge>
                   </ng-container>
                   <ng-container *ngSwitchCase="'stopped'">
-                    <nz-badge nzStatus="error" nzText="停止"></nz-badge>
+                    <nz-badge nzStatus="error" nzText="脱机"></nz-badge>
                   </ng-container>
                 </ng-container>
               </nz-descriptions-item>
