--- a/src/app/admin/workflows/schedules/schedules.component.html
+++ b/src/app/admin/workflows/schedules/schedules.component.html
@@ -72,7 +72,7 @@
 </nz-layout>
 
 <ng-template #stopRef>
-  <nz-badge nzStatus="error" nzText="终止"></nz-badge>
+  <nz-badge nzStatus="error" nzText="脱机"></nz-badge>
 </ng-template>
 
 <ng-template #action let-data>
