--- a/src/app/common/components/nav/profile/profile.component.html
+++ b/src/app/common/components/nav/profile/profile.component.html
@@ -1,6 +1,6 @@
 <nz-page-header nzTitle="个人中心" i18n-nzTitle>
   <nz-page-header-footer>
-    <nz-tabset [(nzSelectedIndex)]="index">
+    <nz-tabset nzSize="small" [(nzSelectedIndex)]="index">
       <nz-tab nzTitle="基本信息" i18n-nzTitle></nz-tab>
       <nz-tab nzTitle="安全设置" i18n-nzTitle></nz-tab>
       <nz-tab nzTitle="办公协作" i18n-nzTitle></nz-tab>
