--- a/src/app/admin/imessages/detail/detail.component.html
+++ b/src/app/admin/imessages/detail/detail.component.html
@@ -29,7 +29,7 @@
         <thead>
           <tr>
             <th nzWidth="60px" nzAlign="center">
-              <button nz-button nzType="text" nz-tooltip="发布消息" i18n-nz-tooltip disabled>
+              <button nz-button nzType="text" nz-tooltip="发布消息" disabled>
                 <span nz-icon nzType="notification" nzTheme="outline"></span>
               </button>
             </th>
