--- a/src/app/admin/integrated/cloud/sms/sms.component.html
+++ b/src/app/admin/integrated/cloud/sms/sms.component.html
@@ -1,12 +1,12 @@
 <form nz-form nzLayout="vertical" id="form" [formGroup]="form" (wpxSubmit)="submit($event)">
   <nz-form-item>
-    <nz-form-label nzRequired i18n>Secret Id</nz-form-label>
+    <nz-form-label nzRequired>Secret Id</nz-form-label>
     <nz-form-control nzHasFeedback [nzAutoTips]="tips.SmsSecretId">
-      <input nz-input formControlName="SmsSecretId" placeholder="请输入 Secret Id" i18n-placeholder />
+      <input nz-input formControlName="SmsSecretId" placeholder="请输入 Secret Id" />
     </nz-form-control>
   </nz-form-item>
   <nz-form-item>
-    <nz-form-label nzRequired i18n>Secret Key</nz-form-label>
+    <nz-form-label nzRequired>Secret Key</nz-form-label>
     <nz-form-control nzHasFeedback [nzAutoTips]="tips.SmsSecretKey">
       <input
         nz-input
@@ -14,18 +14,17 @@
         autocomplete="new-password"
         formControlName="SmsSecretKey"
         placeholder="请输入 Secret Key"
-        i18n-placeholder
       />
     </nz-form-control>
   </nz-form-item>
   <nz-form-item>
-    <nz-form-label nzRequired i18n>App Id</nz-form-label>
+    <nz-form-label nzRequired>App Id</nz-form-label>
     <nz-form-control nzHasFeedback [nzAutoTips]="tips.SmsAppId">
-      <input nz-input formControlName="SmsAppId" placeholder="请输入 App Id" i18n-placeholder />
+      <input nz-input formControlName="SmsAppId" placeholder="请输入 App Id" />
     </nz-form-control>
   </nz-form-item>
   <nz-form-item>
-    <nz-form-label nzRequired i18n>地域</nz-form-label>
+    <nz-form-label nzRequired>地域</nz-form-label>
     <nz-form-control nzHasFeedback [nzAutoTips]="tips.SmsRegion">
       <nz-select style="width: 100%" formControlName="SmsRegion">
         <nz-option nzValue="ap-guangzhou" nzLabel="广州"></nz-option>
@@ -37,6 +36,6 @@
 </form>
 
 <div *nzModalFooter>
-  <button nz-button type="button" nzType="default" (click)="close()" i18n>取消</button>
+  <button nz-button type="button" nzType="default" (click)="close()">取消</button>
   <button nz-button nzType="primary" form="form" [disabled]="!form.valid" i18n>提交</button>
 </div>
