--- a/src/app/admin/settings/values/form/form.component.html
+++ b/src/app/admin/settings/values/form/form.component.html
@@ -1,18 +1,13 @@
 <form nz-form nzLayout="vertical" id="form" [formGroup]="form" (wpxSubmit)="submit($event)">
   <nz-form-item>
-    <nz-form-label nzRequired i18n>键名</nz-form-label>
+    <nz-form-label nzRequired>键名</nz-form-label>
     <nz-form-control nzHasFeedback [nzAutoTips]="tips.key">
       <input nz-input formControlName="key" [readOnly]="!!data" />
     </nz-form-control>
   </nz-form-item>
   <nz-form-item>
-    <nz-form-label nzRequired i18n>键值</nz-form-label>
-    <nz-form-control
-      nzExtra="* 配置值将存储为字符串类型，请谨慎提交默认配置"
-      i18n-nzExtra
-      nzHasFeedback
-      [nzAutoTips]="tips.value"
-    >
+    <nz-form-label nzRequired>键值</nz-form-label>
+    <nz-form-control nzExtra="* 配置值将存储为字符串类型，请谨慎提交默认配置" nzHasFeedback [nzAutoTips]="tips.value">
       <ng-container [ngSwitch]="key">
         <ng-container *ngSwitchCase="'RestControls'">
           <nz-code-editor
@@ -30,6 +25,6 @@
 </form>
 
 <div *nzModalFooter>
-  <button nz-button type="button" nzType="default" (click)="close()" i18n>取消</button>
-  <button nz-button nzType="primary" form="form" [disabled]="!form.valid" i18n>提交</button>
+  <button nz-button type="button" nzType="default" (click)="close()">取消</button>
+  <button nz-button nzType="primary" form="form" [disabled]="!form.valid">提交</button>
 </div>
