--- a/src/app/admin/workflows/schedules/keys/keys.component.html
+++ b/src/app/admin/workflows/schedules/keys/keys.component.html
@@ -17,7 +17,7 @@
         <thead>
           <tr>
             <th nzWidth="60px" nzAlign="center">
-              <button nz-button nzType="text" nz-tooltip="终止" i18n-nz-tooltip disabled>
+              <button nz-button nzType="text" nz-tooltip="终止" disabled>
                 <span nz-icon nzType="stop" nzTheme="outline"></span>
               </button>
             </th>
