--- a/src/app/common/components/nav/profile/name/name.component.html
+++ b/src/app/common/components/nav/profile/name/name.component.html
@@ -2,7 +2,7 @@
   <nz-form-item>
     <nz-form-label i18n>称呼</nz-form-label>
     <nz-form-control nzHasFeedback>
-      <input nz-input formControlName="name" placeholder="请输入称呼" i18n-placeholder />
+      <input nz-input formControlName="name" placeholder="请输入称呼" />
     </nz-form-control>
   </nz-form-item>
 </form>
