--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -28,7 +28,7 @@
         </nz-col>
         <nz-col></nz-col>
         <nz-col>
-          <a routerLink="/forget" i18n>忘记密码了？</a>
+          <a routerLink="/forget">忘记密码了？</a>
         </nz-col>
       </nz-row>
     </div>
