--- a/src/app/admin/datasets/datasets.component.html
+++ b/src/app/admin/datasets/datasets.component.html
@@ -1,20 +1,13 @@
 <ng-template #titleRef>
   <nz-space>
     <nz-input-group *nzSpaceItem style="width: 320px" nzSuffixIcon="search">
-      <input
-        type="text"
-        nz-input
-        placeholder="集合名称"
-        i18n-placeholder
-        [(ngModel)]="items.searchText"
-        (keyup.enter)="getData()"
-      />
+      <input type="text" nz-input placeholder="集合名称" [(ngModel)]="items.searchText" (keyup.enter)="getData()" />
     </nz-input-group>
     <nz-button-group *nzSpaceItem>
-      <button nz-button nzType="text" nz-tooltip="重置" i18n-nz-tooltip (click)="clearSearch()">
+      <button nz-button nzType="text" nz-tooltip="重置" (click)="clearSearch()">
         <i nz-icon nzType="clear"></i>
       </button>
-      <button nz-button nzType="text" nz-tooltip="刷新" i18n-nz-tooltip (click)="getData()">
+      <button nz-button nzType="text" nz-tooltip="刷新" (click)="getData()">
         <i nz-icon nzType="reload"></i>
       </button>
     </nz-button-group>
