--- a/src/app/admin/imessages/emqx/form/form.component.html
+++ b/src/app/admin/imessages/emqx/form/form.component.html
@@ -2,13 +2,13 @@
   <nz-form-item>
     <nz-form-label nzRequired>Emqx Host</nz-form-label>
     <nz-form-control nzHasFeedback [nzAutoTips]="tips.EmqxHost">
-      <input nz-input formControlName="EmqxHost" placeholder="请输入 Host" i18n-placeholder />
+      <input nz-input formControlName="EmqxHost" placeholder="请输入 Host" />
     </nz-form-control>
   </nz-form-item>
   <nz-form-item>
     <nz-form-label nzRequired>Emqx ApiKey</nz-form-label>
     <nz-form-control nzHasFeedback [nzAutoTips]="tips.EmqxApiKey">
-      <input nz-input formControlName="EmqxApiKey" placeholder="请输入 ApiKey" i18n-placeholder />
+      <input nz-input formControlName="EmqxApiKey" placeholder="请输入 ApiKey" />
     </nz-form-control>
   </nz-form-item>
   <nz-form-item>
@@ -20,13 +20,12 @@
         autocomplete="new-password"
         formControlName="EmqxSecretKey"
         placeholder="请输入 SecretKey"
-        i18n-placeholder
       />
     </nz-form-control>
   </nz-form-item>
 </form>
 
 <div *nzModalFooter>
-  <button nz-button type="button" nzType="default" (click)="close()" i18n>取消</button>
-  <button nz-button nzType="primary" form="form" [disabled]="!form.valid" i18n>提交</button>
+  <button nz-button type="button" nzType="default" (click)="close()">取消</button>
+  <button nz-button nzType="primary" form="form" [disabled]="!form.valid">提交</button>
 </div>
