--- a/src/app/admin/integrated/cloud/cloud.component.html
+++ b/src/app/admin/integrated/cloud/cloud.component.html
@@ -5,7 +5,7 @@
     [(nzSelectedIndex)]="tabIndex"
     (nzSelectedIndexChange)="saveTabIndex()"
   >
-    <nz-tab nzTitle="腾讯云" i18n-nzTitle>
+    <nz-tab nzTitle="腾讯云">
       <nz-row style="padding-bottom: 12px" nzJustify="space-between">
         <nz-col>
           <img style="height: 96px" [src]="['assets', 'Tencent-Cloud.svg'] | wpxAssets" alt="" />
@@ -17,7 +17,7 @@
         </nz-col>
       </nz-row>
 
-      <nz-card nzSize="small" nzType="inner" nzTitle="详情" i18n-nzTitle [nzExtra]="tencentEditTpl">
+      <nz-card nzSize="small" nzType="inner" nzTitle="详情" [nzExtra]="tencentEditTpl">
         <ng-template #tencentEditTpl>
           <button nz-button nzType="text" (click)="setTencent()">
             <span nz-icon nzType="edit"></span>
@@ -31,7 +31,7 @@
           </nz-descriptions-item>
           <nz-descriptions-item nzTitle="SecretKey">
             <ng-container *ngIf="values['TencentSecretKey']; else unkown">
-              <span i18n>已设置</span>
+              <span>已设置</span>
             </ng-container>
           </nz-descriptions-item>
         </nz-descriptions>
@@ -39,30 +39,30 @@
 
       <nz-row style="padding-top: 12px" [nzGutter]="[8, 8]">
         <nz-col [nzSpan]="12">
-          <nz-card nzSize="small" nzType="inner" nzTitle="对象存储" i18n-nzTitle [nzExtra]="cosEditTpl">
+          <nz-card nzSize="small" nzType="inner" nzTitle="对象存储" [nzExtra]="cosEditTpl">
             <ng-template #cosEditTpl>
               <button nz-button nzType="text" (click)="setCos()">
                 <span nz-icon nzType="edit"></span>
               </button>
             </ng-template>
-            <p i18n>将静态文件存储在 COS 对象存储中，再通过 CDN 回源分发内容</p>
+            <p>将静态文件存储在 COS 对象存储中，再通过 CDN 回源分发内容</p>
             <nz-descriptions nzLayout="vertical" [nzColumn]="2">
-              <nz-descriptions-item nzTitle="Bucket 名称" i18n-nzTitle>
+              <nz-descriptions-item nzTitle="Bucket 名称">
                 <ng-container *ngIf="values['TencentCosBucket']; else unkown">
                   {{ values['TencentCosBucket'] }}
                 </ng-container>
               </nz-descriptions-item>
-              <nz-descriptions-item nzTitle="地区" i18n-nzTitle>
+              <nz-descriptions-item nzTitle="地区">
                 <ng-container *ngIf="values['TencentCosRegion']; else unkown">
                   {{ values['TencentCosRegion'] }}
                 </ng-container>
               </nz-descriptions-item>
-              <nz-descriptions-item nzTitle="预签名有效期" i18n-nzTitle>
-                <ng-container *ngIf="values['TencentCosExpired']; else unkown" i18n>
+              <nz-descriptions-item nzTitle="预签名有效期">
+                <ng-container *ngIf="values['TencentCosExpired']; else unkown">
                   {{ values['TencentCosExpired'] }} 秒
                 </ng-container>
               </nz-descriptions-item>
-              <nz-descriptions-item nzTitle="上传大小限制" i18n-nzTitle>
+              <nz-descriptions-item nzTitle="上传大小限制">
                 <ng-container *ngIf="values['TencentCosLimit']; else unkown">
                   {{ values['TencentCosLimit'] }} KB
                 </ng-container>
@@ -71,30 +71,30 @@
           </nz-card>
         </nz-col>
         <nz-col [nzSpan]="12">
-          <nz-card nzSize="small" nzType="inner" nzTitle="SMS" i18n-nzTitle [nzExtra]="smsEditTpl">
+          <nz-card nzSize="small" nzType="inner" nzTitle="SMS" [nzExtra]="smsEditTpl">
             <ng-template #smsEditTpl>
               <button nz-button nzType="text" (click)="setSms()">
                 <span nz-icon nzType="edit"></span>
               </button>
             </ng-template>
-            <p i18n>腾讯云短信</p>
+            <p>腾讯云短信</p>
             <nz-descriptions nzLayout="vertical" [nzColumn]="2">
-              <nz-descriptions-item nzTitle="Secret Id" i18n-nzTitle>
+              <nz-descriptions-item nzTitle="Secret Id">
                 <ng-container *ngIf="values['SmsSecretId']; else unkown">
                   {{ values['SmsSecretId'] }}
                 </ng-container>
               </nz-descriptions-item>
-              <nz-descriptions-item nzTitle="Secret Key" i18n-nzTitle>
+              <nz-descriptions-item nzTitle="Secret Key">
                 <ng-container *ngIf="values['SmsSecretKey']; else unkown">
-                  <span i18n>已设置</span>
+                  <span>已设置</span>
                 </ng-container>
               </nz-descriptions-item>
-              <nz-descriptions-item nzTitle="AppId" i18n-nzTitle>
+              <nz-descriptions-item nzTitle="AppId">
                 <ng-container *ngIf="values['SmsAppId']; else unkown">
                   {{ values['SmsAppId'] }}
                 </ng-container>
               </nz-descriptions-item>
-              <nz-descriptions-item nzTitle="地域" i18n-nzTitle>
+              <nz-descriptions-item nzTitle="地域">
                 <ng-container *ngIf="values['SmsRegion']; else unkown">
                   {{ values['SmsRegion'] }}
                 </ng-container>
@@ -104,7 +104,7 @@
         </nz-col>
       </nz-row>
     </nz-tab>
-    <nz-tab nzTitle="阿里云" i18n-nzTitle>
+    <nz-tab nzTitle="阿里云">
       <nz-row style="padding-bottom: 12px" nzJustify="space-between">
         <nz-col>
           <img style="height: 80px; padding: 16px 8px" [src]="['assets', 'AlibabaCloud.png'] | wpxAssets" alt="" />
@@ -121,20 +121,20 @@
         </nz-col>
       </nz-row>
 
-      <nz-card nzSize="small" nzType="inner" nzTitle="详情" i18n-nzTitle [nzExtra]="notYetTpl">
+      <nz-card nzSize="small" nzType="inner" nzTitle="详情" [nzExtra]="notYetTpl">
         <nz-empty nzNotFoundContent=""></nz-empty>
       </nz-card>
 
       <nz-row style="padding-top: 12px" [nzGutter]="[8, 8]">
         <nz-col [nzSpan]="12">
-          <nz-card nzSize="small" nzType="inner" nzTitle="对象存储" i18n-nzTitle [nzExtra]="notYetTpl">
+          <nz-card nzSize="small" nzType="inner" nzTitle="对象存储" [nzExtra]="notYetTpl">
             <p i18n>将静态文件存储在 OSS 对象存储中，再通过 CDN 回源分发内容</p>
             <nz-empty nzNotFoundContent=""></nz-empty>
           </nz-card>
         </nz-col>
       </nz-row>
     </nz-tab>
-    <nz-tab nzTitle="AWS" i18n-nzTitle>
+    <nz-tab nzTitle="AWS">
       <nz-row style="padding-bottom: 12px" nzJustify="space-between">
         <nz-col>
           <img style="height: 80px; padding: 16px 8px" [src]="['assets', 'AWS.png'] | wpxAssets" alt="" />
@@ -145,13 +145,13 @@
         </nz-col>
       </nz-row>
 
-      <nz-card nzSize="small" nzType="inner" nzTitle="详情" i18n-nzTitle [nzExtra]="notYetTpl">
+      <nz-card nzSize="small" nzType="inner" nzTitle="详情" [nzExtra]="notYetTpl">
         <nz-empty nzNotFoundContent=""></nz-empty>
       </nz-card>
 
       <nz-row style="padding-top: 12px" [nzGutter]="[8, 8]">
         <nz-col [nzSpan]="12">
-          <nz-card nzSize="small" nzType="inner" nzTitle="对象存储" i18n-nzTitle [nzExtra]="notYetTpl">
+          <nz-card nzSize="small" nzType="inner" nzTitle="对象存储" [nzExtra]="notYetTpl">
             <p i18n>将静态文件存储在 S3 对象存储中，再通过 CDN 回源分发内容</p>
             <nz-empty nzNotFoundContent=""></nz-empty>
           </nz-card>
