--- a/src/app/admin/integrated/cloud/tencent/tencent.component.html
+++ b/src/app/admin/integrated/cloud/tencent/tencent.component.html
@@ -2,7 +2,7 @@
   <nz-form-item>
     <nz-form-label nzRequired>SecretId</nz-form-label>
     <nz-form-control nzHasFeedback [nzAutoTips]="tips.TencentSecretId">
-      <input nz-input formControlName="TencentSecretId" placeholder="请输入腾讯云 SecretId" i18n-placeholder />
+      <input nz-input formControlName="TencentSecretId" placeholder="请输入腾讯云 SecretId" />
     </nz-form-control>
   </nz-form-item>
   <nz-form-item>
@@ -14,13 +14,12 @@
         autocomplete="new-password"
         formControlName="TencentSecretKey"
         placeholder="请输入腾讯云 SecretKey"
-        i18n-placeholder
       />
     </nz-form-control>
   </nz-form-item>
 </form>
 
 <div *nzModalFooter>
-  <button nz-button type="button" nzType="default" (click)="close()" i18n>取消</button>
-  <button nz-button nzType="primary" form="form" [disabled]="!form.valid" i18n>提交</button>
+  <button nz-button type="button" nzType="default" (click)="close()">取消</button>
+  <button nz-button nzType="primary" form="form" [disabled]="!form.valid">提交</button>
 </div>
