--- a/src/app/admin/integrated/collaboration/redirect/redirect.component.html
+++ b/src/app/admin/integrated/collaboration/redirect/redirect.component.html
@@ -1,13 +1,13 @@
 <form nz-form nzLayout="vertical" id="form" [formGroup]="form" (wpxSubmit)="submit($event)">
   <nz-form-item>
-    <nz-form-label nzRequired i18n>重定向地址</nz-form-label>
+    <nz-form-label nzRequired>重定向地址</nz-form-label>
     <nz-form-control nzHasFeedback [nzAutoTips]="tips.RedirectUrl">
-      <input nz-input formControlName="RedirectUrl" placeholder="请输入重定向地址" i18n-placeholder />
+      <input nz-input formControlName="RedirectUrl" placeholder="请输入重定向地址" />
     </nz-form-control>
   </nz-form-item>
 </form>
 
 <div *nzModalFooter>
-  <button nz-button type="button" nzType="default" (click)="close()" i18n>取消</button>
-  <button nz-button nzType="primary" form="form" [disabled]="!form.valid" i18n>提交</button>
+  <button nz-button type="button" nzType="default" (click)="close()">取消</button>
+  <button nz-button nzType="primary" form="form" [disabled]="!form.valid">提交</button>
 </div>
