--- a/src/app/admin/integrated/extend/email/email.component.html
+++ b/src/app/admin/integrated/extend/email/email.component.html
@@ -3,18 +3,11 @@
     <nz-form-label nzRequired>SMTP 主机 （SSL）</nz-form-label>
     <nz-form-control>
       <nz-input-group nzCompact>
-        <input
-          style="width: 75%"
-          nz-input
-          formControlName="EmailHost"
-          placeholder="请输入 SMTP 主机"
-          i18n-placeholder
-        />
+        <input style="width: 75%" nz-input formControlName="EmailHost" placeholder="请输入 SMTP 主机" />
         <nz-input-number
           style="width: 25%"
           formControlName="EmailPort"
           nzPlaceHolder="端口"
-          i18n-nzPlaceHolder
           [nzMin]="0"
           [nzStep]="1"
         ></nz-input-number>
@@ -22,13 +15,13 @@
     </nz-form-control>
   </nz-form-item>
   <nz-form-item>
-    <nz-form-label nzRequired i18n>用户名</nz-form-label>
+    <nz-form-label nzRequired>用户名</nz-form-label>
     <nz-form-control nzHasFeedback [nzAutoTips]="tips.EmailUsername">
       <input nz-input formControlName="EmailUsername" placeholder="support@example.com" />
     </nz-form-control>
   </nz-form-item>
   <nz-form-item>
-    <nz-form-label nzRequired i18n>密码</nz-form-label>
+    <nz-form-label nzRequired>密码</nz-form-label>
     <nz-form-control nzHasFeedback [nzAutoTips]="tips.EmailPassword">
       <input
         nz-input
@@ -36,13 +29,12 @@
         autocomplete="new-password"
         formControlName="EmailPassword"
         placeholder="请输入密码"
-        i18n-placeholder
       />
     </nz-form-control>
   </nz-form-item>
 </form>
 
 <div *nzModalFooter>
-  <button nz-button type="button" nzType="default" (click)="close()" i18n>取消</button>
-  <button nz-button nzType="primary" form="form" [disabled]="!form.valid" i18n>提交</button>
+  <button nz-button type="button" nzType="default" (click)="close()">取消</button>
+  <button nz-button nzType="primary" form="form" [disabled]="!form.valid">提交</button>
 </div>
