--- a/src/app/admin/settings/security/security.component.html
+++ b/src/app/admin/settings/security/security.component.html
@@ -5,53 +5,39 @@
     [(nzSelectedIndex)]="tabIndex"
     (nzSelectedIndexChange)="saveTabIndex()"
   >
-    <nz-tab nzTitle="基本设置" i18n-nzTitle>
+    <nz-tab nzTitle="基本设置">
       <nz-card>
         <nz-list nzSize="large" nzItemLayout="vertical">
           <nz-list-item>
             <nz-list-item-meta>
-              <nz-list-item-meta-title><b i18n>会话超时策略</b></nz-list-item-meta-title>
-              <nz-list-item-meta-description i18n>
+              <nz-list-item-meta-title><b>会话超时策略</b></nz-list-item-meta-title>
+              <nz-list-item-meta-description>
                 用户在 {{ data['SessionTTL'] / 1e9 }} 秒内没有操作，退出当前帐号。
               </nz-list-item-meta-description>
             </nz-list-item-meta>
             <nz-list-item-extra>
-              <button
-                nz-button
-                nzType="primary"
-                nzShape="circle"
-                nz-tooltip="编辑"
-                i18n-nz-tooltip
-                (click)="setSession()"
-              >
+              <button nz-button nzType="primary" nzShape="circle" nz-tooltip="编辑" (click)="setSession()">
                 <i nz-icon nzType="edit"></i>
               </button>
             </nz-list-item-extra>
           </nz-list-item>
           <nz-list-item>
             <nz-list-item-meta>
-              <nz-list-item-meta-title><b i18n>帐号锁定策略</b></nz-list-item-meta-title>
-              <nz-list-item-meta-description i18n>
+              <nz-list-item-meta-title><b>帐号锁定策略</b></nz-list-item-meta-title>
+              <nz-list-item-meta-description>
                 用户连续登录失败 {{ data['LoginFailures'] }} 次， 锁定帐号 {{ data['LoginTTL'] / 1e9 }} 秒。
               </nz-list-item-meta-description>
             </nz-list-item-meta>
             <nz-list-item-extra>
-              <button
-                nz-button
-                nzType="primary"
-                nzShape="circle"
-                nz-tooltip="编辑"
-                i18n-nz-tooltip
-                (click)="setUserLock()"
-              >
+              <button nz-button nzType="primary" nzShape="circle" nz-tooltip="编辑" (click)="setUserLock()">
                 <i nz-icon nzType="edit"></i>
               </button>
             </nz-list-item-extra>
           </nz-list-item>
           <nz-list-item>
             <nz-list-item-meta>
-              <nz-list-item-meta-title><b i18n>IP 锁定策略</b></nz-list-item-meta-title>
-              <nz-list-item-meta-description i18n>
+              <nz-list-item-meta-title><b>IP 锁定策略</b></nz-list-item-meta-title>
+              <nz-list-item-meta-description>
                 IP 连续 {{ data['IpLoginFailures'] }} 次登录失败后（无白名单时启用），锁定 IP。
               </nz-list-item-meta-description>
             </nz-list-item-meta>
@@ -63,32 +49,25 @@
           </nz-list-item>
           <nz-list-item>
             <nz-list-item-meta>
-              <nz-list-item-meta-title><b i18n>密码强度策略</b></nz-list-item-meta-title>
+              <nz-list-item-meta-title><b>密码强度策略</b></nz-list-item-meta-title>
               <nz-list-item-meta-description>
                 <ng-container [ngSwitch]="data['PwdStrategy']">
-                  <ng-container *ngSwitchCase="0" i18n> 无限制 </ng-container>
-                  <ng-container *ngSwitchCase="1" i18n> 需要大写字母和小写字母 </ng-container>
-                  <ng-container *ngSwitchCase="2" i18n> 需要大写字母、小写字母和数字 </ng-container>
-                  <ng-container *ngSwitchCase="3" i18n> 需要大写字母、小写字母、数字和特殊字符 </ng-container>
+                  <ng-container *ngSwitchCase="0"> 无限制 </ng-container>
+                  <ng-container *ngSwitchCase="1"> 需要大写字母和小写字母 </ng-container>
+                  <ng-container *ngSwitchCase="2"> 需要大写字母、小写字母和数字 </ng-container>
+                  <ng-container *ngSwitchCase="3"> 需要大写字母、小写字母、数字和特殊字符 </ng-container>
                 </ng-container>
               </nz-list-item-meta-description>
             </nz-list-item-meta>
             <nz-list-item-extra>
-              <button
-                nz-button
-                nzType="primary"
-                nzShape="circle"
-                nz-tooltip="编辑"
-                i18n-nz-tooltip
-                (click)="setPwdStrategy()"
-              >
+              <button nz-button nzType="primary" nzShape="circle" nz-tooltip="编辑" (click)="setPwdStrategy()">
                 <i nz-icon nzType="edit"></i>
               </button>
             </nz-list-item-extra>
           </nz-list-item>
           <nz-list-item>
             <nz-list-item-meta>
-              <nz-list-item-meta-title><b i18n>密码有效期策略</b></nz-list-item-meta-title>
+              <nz-list-item-meta-title><b>密码有效期策略</b></nz-list-item-meta-title>
               <nz-list-item-meta-description>
                 <ng-container *ngIf="data['PwdTTL'] === 0; else passwordExpire" i18n> 永久 </ng-container>
                 <ng-template #passwordExpire>
@@ -99,14 +78,7 @@
               </nz-list-item-meta-description>
             </nz-list-item-meta>
             <nz-list-item-extra>
-              <button
-                nz-button
-                nzType="primary"
-                nzShape="circle"
-                nz-tooltip="编辑"
-                i18n-nz-tooltip
-                (click)="setPwdTtl()"
-              >
+              <button nz-button nzType="primary" nzShape="circle" nz-tooltip="编辑" (click)="setPwdTtl()">
                 <i nz-icon nzType="edit"></i>
               </button>
             </nz-list-item-extra>
@@ -114,7 +86,7 @@
         </nz-list>
       </nz-card>
     </nz-tab>
-    <nz-tab nzTitle="白名单" i18n-nzTitle>
+    <nz-tab nzTitle="白名单">
       <nz-card>
         <nz-row [nzGutter]="[8, 8]">
           <nz-col nzFlex="800px">
@@ -145,14 +117,13 @@
               style="width: 200px"
               nzType="info"
               nzMessage="IP 白名单"
-              i18n-nzMessage
               nzDescription="白名单IP不限制登录失败的锁定"
             ></nz-alert>
           </nz-col>
         </nz-row>
       </nz-card>
     </nz-tab>
-    <nz-tab nzTitle="黑名单" i18n-nzTitle>
+    <nz-tab nzTitle="黑名单">
       <nz-card>
         <nz-row [nzGutter]="[8, 8]">
           <nz-col nzFlex="800px">
@@ -183,9 +154,7 @@
               style="width: 200px"
               nzType="info"
               nzMessage="IP 黑名单"
-              i18n-nzMessage
               nzDescription="黑名单将被禁止访问"
-              i18n-nzDescription
             ></nz-alert>
           </nz-col>
         </nz-row>
