--- a/src/app/admin/settings/security/user-lock/user-lock.component.html
+++ b/src/app/admin/settings/security/user-lock/user-lock.component.html
@@ -1,6 +1,6 @@
 <form *ngIf="form" nz-form nzLayout="vertical" id="form" [formGroup]="form" (wpxSubmit)="submit($event)">
   <nz-form-item>
-    <nz-form-label nzRequired i18n>连续登录失败上限</nz-form-label>
+    <nz-form-label nzRequired>连续登录失败上限</nz-form-label>
     <nz-form-control nzHasFeedback [nzAutoTips]="tips.LoginFailures">
       <nz-input-number
         style="width: 100%"
@@ -12,8 +12,8 @@
     </nz-form-control>
   </nz-form-item>
   <nz-form-item>
-    <nz-form-label nzRequired i18n>锁定时间</nz-form-label>
-    <nz-form-control nzHasFeedback nzExtra="账户连续登录或已被锁定的有限时间" i18n-nzExtra [nzAutoTips]="tips.LoginTTL">
+    <nz-form-label nzRequired>锁定时间</nz-form-label>
+    <nz-form-control nzHasFeedback nzExtra="账户连续登录或已被锁定的有限时间" [nzAutoTips]="tips.LoginTTL">
       <nz-input-number
         style="width: 100%"
         formControlName="LoginTTL"
@@ -26,6 +26,6 @@
 </form>
 
 <div *nzModalFooter>
-  <button nz-button type="button" nzType="default" (click)="close()" i18n>取消</button>
-  <button nz-button nzType="primary" form="form" [disabled]="!form.valid" i18n>提交</button>
+  <button nz-button type="button" nzType="default" (click)="close()">取消</button>
+  <button nz-button nzType="primary" form="form" [disabled]="!form.valid">提交</button>
 </div>
