--- a/src/app/admin/settings/values/values.component.html
+++ b/src/app/admin/settings/values/values.component.html
@@ -7,20 +7,13 @@
       nz-tooltip="键盘 Enter 开始搜索"
       nzTooltipTrigger="focus"
     >
-      <input
-        [(ngModel)]="searchText"
-        (keyup.enter)="getData()"
-        type="text"
-        nz-input
-        placeholder="键名"
-        i18n-placeholder
-      />
+      <input [(ngModel)]="searchText" (keyup.enter)="getData()" type="text" nz-input placeholder="键名" />
     </nz-input-group>
     <nz-button-group *nzSpaceItem>
-      <button nz-button nzType="text" nz-tooltip="刷新" i18n-nz-tooltip (click)="getData()">
+      <button nz-button nzType="text" nz-tooltip="刷新" (click)="getData()">
         <i nz-icon nzType="reload"></i>
       </button>
-      <button nz-button nzType="text" nz-tooltip="重置" i18n-nz-tooltip (click)="clearSearch()">
+      <button nz-button nzType="text" nz-tooltip="重置" (click)="clearSearch()">
         <i nz-icon nzType="clear"></i>
       </button>
     </nz-button-group>
@@ -29,7 +22,7 @@
 
 <ng-template #extraRef>
   <nz-space>
-    <button *nzSpaceItem nz-button nzType="primary" (click)="form()" i18n> 新增 </button>
+    <button *nzSpaceItem nz-button nzType="primary" (click)="form()"> 新增 </button>
   </nz-space>
 </ng-template>
 
@@ -44,8 +37,8 @@
   >
     <thead>
       <tr>
-        <th nzWidth="320px"><b i18n>键名</b></th>
-        <th><b i18n>键值</b></th>
+        <th nzWidth="320px"><b>键名</b></th>
+        <th><b>键值</b></th>
         <th nzRight nzWidth="60px">
           <button nz-button nzType="text" disabled>
             <span nz-icon nzType="setting" nzTheme="outline"></span>
@@ -65,8 +58,8 @@
           </button>
           <nz-dropdown-menu #menu="nzDropdownMenu">
             <ul nz-menu>
-              <li nz-menu-item (click)="form(data)" i18n>编辑</li>
-              <li nz-menu-item nzDanger (click)="delete(data.key)" i18n>删除</li>
+              <li nz-menu-item (click)="form(data)">编辑</li>
+              <li nz-menu-item nzDanger (click)="delete(data.key)">删除</li>
             </ul>
           </nz-dropdown-menu>
         </td>
