--- a/src/app/forget/forget.component.html
+++ b/src/app/forget/forget.component.html
@@ -1,30 +1,24 @@
 <app-blank-page>
   <nz-steps style="width: 50%; margin: 0 auto" [nzCurrent]="index" nzProgressDot>
-    <nz-step nzTitle="验证" i18n-nzTitle></nz-step>
-    <nz-step nzTitle="重置" i18n-nzTitle></nz-step>
-    <nz-step nzTitle="完成" i18n-nzTitle></nz-step>
+    <nz-step nzTitle="验证"></nz-step>
+    <nz-step nzTitle="重置"></nz-step>
+    <nz-step nzTitle="完成"></nz-step>
   </nz-steps>
   <nz-row nzJustify="center">
     <div style="min-width: 540px">
-      <nz-page-header nzBackIcon nzTitle="找回密码" i18n-nzTitle> </nz-page-header>
+      <nz-page-header nzBackIcon nzTitle="找回密码"> </nz-page-header>
       <div style="width: 360px; margin: 12px auto 0" [ngSwitch]="index">
         <form *ngSwitchCase="0" nz-form nzLayout="vertical" [formGroup]="verifyForm" (wpxSubmit)="verifySubmit($event)">
           <nz-form-item>
-            <nz-form-label nzRequired i18n>电子邮件</nz-form-label>
+            <nz-form-label nzRequired>电子邮件</nz-form-label>
             <nz-form-control nzHasFeedback [nzAutoTips]="tips.email">
-              <input
-                type="email"
-                formControlName="email"
-                nz-input
-                placeholder="例如：mail@example.com"
-                i18n-placeholder
-              />
+              <input type="email" formControlName="email" nz-input placeholder="例如：mail@example.com" />
             </nz-form-control>
           </nz-form-item>
 
           <nz-form-item>
-            <nz-form-label nzRequired i18n>验证码</nz-form-label>
-            <nz-form-control nzExtra="*电子邮件可能会被个人设置拦截" i18n-nzExtra [nzAutoTips]="tips.code">
+            <nz-form-label nzRequired>验证码</nz-form-label>
+            <nz-form-control nzExtra="*电子邮件可能会被个人设置拦截" [nzAutoTips]="tips.code">
               <nz-row [nzGutter]="8">
                 <nz-col nzFlex="1">
                   <input nz-input formControlName="code" placeholder="验证码" />
@@ -47,13 +41,13 @@
 
           <nz-form-item>
             <nz-form-control>
-              <button nz-button nzBlock [disabled]="!verifyForm.valid" i18n> 下一步 </button>
+              <button nz-button nzBlock [disabled]="!verifyForm.valid"> 下一步 </button>
             </nz-form-control>
           </nz-form-item>
         </form>
         <form *ngSwitchCase="1" nz-form nzLayout="vertical" [formGroup]="resetForm" (wpxSubmit)="resetSubmit($event)">
           <nz-form-item>
-            <nz-form-label nzRequired i18n> 密码 </nz-form-label>
+            <nz-form-label nzRequired> 密码 </nz-form-label>
             <nz-form-control nzHasFeedback [nzAutoTips]="tips.password">
               <input
                 nz-input
@@ -61,7 +55,6 @@
                 autocomplete="new-password"
                 formControlName="password"
                 placeholder="请输入重置密码"
-                i18n-placeholder
               />
             </nz-form-control>
           </nz-form-item>
@@ -74,7 +67,6 @@
                 autocomplete="new-password"
                 formControlName="check"
                 placeholder="请再次输入重置密码"
-                i18n-placeholder
               />
             </nz-form-control>
           </nz-form-item>
@@ -91,7 +83,7 @@
             </nz-form-control>
           </nz-form-item>
         </form>
-        <nz-result *ngSwitchCase="2" nzStatus="success" nzTitle="您的密码已重置" i18n-nzTitle>
+        <nz-result *ngSwitchCase="2" nzStatus="success" nzTitle="您的密码已重置">
           <div nz-result-extra>
             <button nz-button nzType="primary" routerLink="/login" i18n>返回登录页</button>
           </div>
